<resources>
    <string name="app_name">PopularMovies</string>
    <string name="api_key">599c34d73931abe6918cfd12792fd160</string>
    <string name="overview_movie_content_description">Movie Image</string>

    <string name="vote_average"> Vote average</string>
    <string name="highest_rated"> Highest Rated</string>
    <string name="popularity"> Popularity</string>
    <string name="favorites"> Favorites</string>
    <string name="fav">Fav this!</string>
    <string name="unfav">Un-Fav this!</string>
    <string name="most_popular"> Most Popular</string>
    <string name="adult"> Adult</string>
    <string name="orig_language"> Original Language</string>
    <string name="orig_title"> Original Title</string>
    <string name="overview"> Overview</string>
    <string name="release_date"> Release Date</string>
    <string name="title"> Title</string>

    <string name="order_by">Order by</string>
    <string name="refresh">Refresh</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="nothing_to_load">Nothing to load...</string>

    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="url">Url</string>

    <string name="button_reviews">Reviews</string>
    <string name="button_trailer">Trailer</string>
</resources>
